--- a/demo-1/style/styles.css
+++ b/demo-1/style/styles.css
@@ -1,4 +1,4 @@
-/* font setup */
+
 
 .azeret-mono {
   font-family: "Azeret Mono", serif;
@@ -29,7 +29,7 @@
   padding: 17px 24px;
   font-weight: 600px;
   font-size: 20px;
-  color: #0d1321;
+  color: #2956c0;
   border-style: none;
 }
 
@@ -47,7 +47,7 @@
 .head-para {
   font-size: 16px;
   font-weight: normal;
-  color: rgba(13, 19, 33, 1);
+  color: rgb(58, 99, 194);
   width: 850px;
   margin: auto;
   margin-bottom: 32px;
@@ -67,7 +67,7 @@
 }
 
 .layer-1-head-color {
-  color: rgba(13, 19, 33, 0.7);
+  color: rgba(138, 146, 164, 0.7);
 }
 
 .layer-1-head-para {
@@ -107,7 +107,7 @@
 
 .target-1-container {
   padding: 40px;
-  background-color: rgba(255, 76, 30, 0.05);
+  background-color:rgb(194, 137, 137);
   border-radius: 16px;
 }
 
@@ -119,7 +119,7 @@
 
 .target-3-container {
   padding: 40px;
-  background-color: rgba(255, 223, 0, 0.05);
+  background-color: rgba(217, 227, 21, 0.05);
   border-radius: 16px;
 }
 
@@ -133,7 +133,7 @@
 
 .support-container {
   background-image: url("../assets/handshake.jpg");
-  /* background-size: 100%; */
+
   background-repeat: no-repeat;
   background-position: center;
   padding: 64px 48px;
